--- a/2css/index.html
+++ b/2css/index.html
@@ -1,14 +1,19 @@
 <html>
     <head>
         <title>Page title</title>
+        <link rel="stylesheet" type="text/css" href="style.css">
+
     </head>
     <body>
         <header>
             <h1>Logo</h1>
-        <nav><a href="index.html">Home</a> | <a href="page.html">Page</a></nav>
+        <nav><a href="index.html">Home</a> </nav>
         </header>
         <content>
-            <h2>Home Page</h2>
+            <h2>Box model</h2>
+            <div id="box">
+Text within
+            </div>
 <p>Content</p>
         </content>
         <footer>
