--- a/3js/index.html
+++ b/3js/index.html
@@ -1,15 +1,20 @@
 <html>
     <head>
         <title>Page title</title>
+        <link rel="stylesheet" type="text/css" href="style.css">
+
     </head>
     <body>
         <header>
             <h1>Logo</h1>
-        <nav><a href="index.html">Home</a> | <a href="page.html">Page</a></nav>
+        <nav><a href="index.html">Home</a> </nav>
         </header>
         <content>
-            <h2>Sub Page</h2>
-            <p>Content Page</p>
+            <h2>Box model</h2>
+            <div id="box">
+Text within
+            </div>
+<p>Content</p>
         </content>
         <footer>
             <h2>footer</h2>
